# iz2

./: .travis.yml  CMakeLists.txt  README.md  do_statistic.c  header.h  main.c  run_and_write.c  structs.h  test.c  work_test.c
linters/: run.sh
